--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,8 @@ jobs:
         with:
           node-version: 18
 
-      - name: Check node version
-        run: node --version
+      - name: Install dependencies
+        run: npm ci
+
+      - name: run tests
+        run: npm run test
