--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -37,6 +40,9 @@ jobs:
 
       - name: Build Docker
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/cicd-465605/notely-ar-repo/notely-app:latest .
+
+      - name: Run migrations
+        run: npm run db:migrate
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/cicd-465605/notely-ar-repo/notely-app:latest --region us-central1 --allow-unauthenticated --project cicd-465605 --max-instances=4
